tmp-prod-full/objects/MC_Sync_Object__mdt/fields/DE_External_Key__c.field-meta.xml
<CustomField>
    <fullName>DE_External_Key__c</fullName>
    <label>DE External Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>