tmp-prod-full/objects/MC_Sync_Object__mdt/fields/SOQL_Fields__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Fields__c</fullName>
    <label>SOQL Fields</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>