tmp-prod-full/objects/MC_Sync_Object__mdt/fields/Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>Where_Clause__c</fullName>
    <label>Where Clause</label>
    <type>TextArea</type>
</CustomField>